# layout-clustering-assignment

./: .gitignore  .mypy.ini  .pre-commit-config.yaml  CLEANUP_COMPLETE.md  README.md  REFACTORING_SUMMARY.md  SETUP.md  TYPE_CHECKING_CONFIG.md  __init__.py  env.example  main.py  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  run_pipeline.py
analysis/: quality.py
clustering/: __init__.py  baseline.py  components.py  flexible.py  structural.py
config/: clustering_config.yaml  manager.py  recommendation_config.yaml
core/: schemas.py
data/01_raw/: assignment_data.json
embeddings/: __init__.py  base.py  factory.py  layoutlmv1.py  layoutlmv3.py
features/: geometric.py
notebooks/: clustering_and_llm_recommendations.ipynb  clustering_comparison_analysis.ipynb
prompts/: base_prompt.yaml  design_principles.yaml  feature_strategies.yaml  layout_improvement.yaml  loader.py
proposal/: research_proposal.md
recommendation/: engine.py
tests/: conftest.py  test_evaluation.py  test_features.py
utils/: evaluation.py  logger.py  visualization.py
